Used "URI" class instead of "URL".